--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <div class="skill-row">
                 <img class="skill-image-right" src="images/finanzas.png" alt="finanzas">
                 <h3>Finanzas</h3>
-                <p>Conozco las bases sobre finanzas y los estados financieros necesarios para comenzar y administrar un startup, y crear estrategias para maximar su rendimiento y mejorar su operacion financieramente.</p>
+                <p class="p-left">Conozco las bases sobre finanzas y los estados financieros necesarios para comenzar y administrar un startup, y crear estrategias para maximar su rendimiento y mejorar su operacion financieramente.</p>
                 <br>
               </div>
               <div class="skill-row">
@@ -47,7 +47,7 @@
               <div class="skill-row">
                 <img class="skill-image-right" src="images/gestion.png" alt="gestion">
                 <h3>Gestión</h3>
-                <p>Estoy comenzando a estudiar sobre gestion y liderazgo actualmente para poder formar equipos competentes y desarrollar al maximo nuestro potencial</p>
+                <p class="p-left">Estoy comenzando a estudiar sobre gestion y liderazgo actualmente para poder formar equipos competentes y desarrollar al maximo nuestro potencial</p>
                 <br>
               </div>
             </div>
@@ -60,8 +60,8 @@
           
           <div class="bottom-container">
             <a class="footer-link" href="https://www.linkedin.com/in/marco-osvaldo-rivas-romo-4b32191b6/?originalSubdomain=mx">LinkedIn</a>
-            <div>Iconos diseñados por <a href="https://www.freepik.com" title="Freepik">Freepik</a> y <a href="https://www.flaticon.es/autores/skyclick" title="Skyclick">Skyclick</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div>
-            <p>© 2021 Marco Rivas.</p>
+            <div class="credits">Iconos diseñados por <a href="https://www.freepik.com" title="Freepik">Freepik</a> y <a href="https://www.flaticon.es/autores/skyclick" title="Skyclick">Skyclick</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div>
+            <p class="credits">© 2021 Marco Rivas.</p>
           </div>          
     </body>
 </html>
