--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           
           <div class="bottom-container">
             <a class="footer-link" href="https://www.linkedin.com/in/marco-osvaldo-rivas-romo-4b32191b6/?originalSubdomain=mx">LinkedIn</a>
-            <div class="credits">Iconos diseñados por <a href="https://www.freepik.com" title="Freepik">Freepik</a> y <a href="https://www.flaticon.es/autores/skyclick" title="Skyclick">Skyclick</a> from <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div>
+            <div class="credits">Iconos diseñados por <a href="https://www.freepik.com" title="Freepik">Freepik</a> y <a href="https://www.flaticon.es/autores/skyclick" title="Skyclick">Skyclick</a> de <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a></div>
             <p class="credits">© 2021 Marco Rivas.</p>
           </div>          
     </body>
